testing/errors/backslash.a
	*=$1000
	!tx "\q"	; -> "Unsupported backslash sequence."
